--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Layout Master</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
-</head>
+  <link rel="stylesheet" type="text/css" href="./style.css"></head>
+</html>
 <body>
-  <nav class="zone blue sticky">
-     <ul class ="main-nav">
-       <li><a href="">About</a></li>
-       <li><a href="">Products</a></li>
-       <li><a href="">Our Team</a></li>
-       <li class ="pushright"><a href="">Contacts</a></li>
-      </ul>
-   </nav>
+<nav id="navbar">
+    <ul class ="main-nav">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Our Team</a></li>
+      <li class ="pushright"><a href="#">Contacts</a></li>
+    </ul>
+</nav>
 
-  <div class="container zone"><img class="cover" src="./img/Asset26.png"></div>
+<section class="container">
+  <div class="context">
+    <h1>Welcome to My Website</h1>
+  </div>
+  <img class="cover" src="./img/Asset26.png">
+</section>
+
    <div class ="zone blue grid-wrapper">
     <div class="box zone"><img src="./img/files_2.png"></div>
     <div class="box zone"><img src="./img/server_2_2.png"></div>
@@ -28,6 +36,6 @@
 
    </div>
  
-   <footer class="zone black ">Designed by Corey.</div>
+   <footer class="footer">Designed by <a href="https://github.com/corey10">Corey10</a></div>
 </body>
 </html>
